--- a/gai_project/ch02.md
+++ b/gai_project/ch02.md
@@ -1,5 +1,40 @@
 # Chapter 02: Planificacion y programacion
 
+## Objetivos del proyecto
+
+
+de la urgencia, de las dependencias que se generen desde esta tarea, de los recursos que en caso de no usarse en esta tarea queden parados y de otras decenas de factores muchos de los cuales serán subjetivos para el gestor o la gestora del proyecto. 
+
+CÓMO se va a hacer, trata concretamente de la distribución de actividades. Las actividades son cada uno de los grandes bloques en que se divide un proyecto. Cada una de ellas puede ser divisible en otros elementos más sencillos llamados tareas. Cada actividad, gracias a estas subdivisiones, se puede mostrar como un pequeño proyecto dentro del proyecto madre. Además, al manejar porciones de problemas a resolver más simples y de menor tamaño, permite una mejor previsión de los tiempos y costes. 
+
+QUIÉN lo hará, se refiere a la asignación de los mandos intermedios que se encargarán de hilos concretos del proyecto. Estos mandos intermedios serán el enlace entre el gestor o la gestora y el gran grupo de trabajadores y trabajadoras. Estas personas son también las que van a resolver los inconvenientes menores que vayan surgiendo en el desarrollo de; proyecto así que es importante elegir a personas que tengan unas capacidades y un conocimiento extenso de la materia que deben ges. 
+
+Por último, el CUÁNDO debe concretar tanto el que una en marcha como la duración de esta. Además, se define{i definiendo qué relaciones de dependencia se pueden ser iniciadas hasta el momento en que otras tareas sean acabadas porque recibir algo de la primera, ya sean datos, algún objeto desarrouado o algún recurso en otra parte del proyecto
+
+## Presupuesto
+
+Realizar el presupuesto de un proyecto es sencillo si anteriormente se han elaborado adecuadamente las tareas necesarias, y los recursos básicos imprescindibles para ponerlas en marcha les han sido asignados. 
+
+Para crear un presupuesto hay que tener una previsión del coste que el producto final llevará asociado, tanto en recursos materiales como humanos. También se debe sumar el beneficio empresarial que el desarrollador o la desarrolladora desea obtener por su trabajo y los impuestos que sean aplicables como, por ejemplo, el IVA
+
+Cada actividad tendrá un coste determinado y la suma de todas las actividades arrojará el coste total del proyecto. Para poder establecerlos se han de tener en cuenta conceptos como:
+
+- Materiales utilizados como materias primas, material fungible, ropa de trabajo, etcétera. 
+
+-  Coste de las personas que participan directamente en la actividad. 
+
+- Coste del gestor o la gestora. 
+
+- Alquiler o compra de herramientas, maquinaria, equipos informáticos y/o audiovisuales, locales, etcétera
+
+- Contratos de suministros: agua, luz, electricidad, gas, etcétera. 
+
+- Subcontrataciones, gastos de publicidad, seguros, etcétera. 
+
+De la misma forma que se establece la fecha prevista de entrega, tambien se deben indicar las posibles penalizaciones y bonificaciones que pueden darse si no se cumple la fecha prevista. Puede acordarse con el cliente incentivos especiales si se reduce el tiempo previsto, de forma que la empresa pueda rentabilizar un numero de horas extraordinarias de trabajo en sus recursos. 
+
+Es recomendable entregar el presupuesto en un formato PDF para evitar que se puedan producir modificaciones en el documento una vez firmado.
+
 ## Planteamiento inicial
 
 ### Actividad 2.2
