--- a/gai_project/ch02.md
+++ b/gai_project/ch02.md
@@ -2,14 +2,13 @@
 
 ## Objetivos del proyecto
 
+- QUÉ va hacerse o definir la asignacion de recursos permite al gestor establecer una relacion optima entre el tiempo que se tardará y el coste. No existe una regla fija para establecer la mejor relación, sino que dependerá de la urgencia, de las dependencias que se generen desde esta tarea, de los recursos que en caso de no usarse en esta tarea queden parados y de otras decenas de factores muchos de los cuales serán subjetivos para el gestor.
 
-de la urgencia, de las dependencias que se generen desde esta tarea, de los recursos que en caso de no usarse en esta tarea queden parados y de otras decenas de factores muchos de los cuales serán subjetivos para el gestor o la gestora del proyecto. 
+- CÓMO se va a hacer, trata concretamente de la distribución de actividades. Las actividades son cada uno de los grandes bloques en que se divide un proyecto. Cada una de ellas puede ser divisible en otros elementos más sencillos llamados tareas. Cada actividad, gracias a estas subdivisiones, se puede mostrar como un pequeño proyecto dentro del proyecto madre. Además, al manejar porciones de problemas a resolver más simples y de menor tamaño, permite una mejor previsión de los tiempos y costes. 
 
-CÓMO se va a hacer, trata concretamente de la distribución de actividades. Las actividades son cada uno de los grandes bloques en que se divide un proyecto. Cada una de ellas puede ser divisible en otros elementos más sencillos llamados tareas. Cada actividad, gracias a estas subdivisiones, se puede mostrar como un pequeño proyecto dentro del proyecto madre. Además, al manejar porciones de problemas a resolver más simples y de menor tamaño, permite una mejor previsión de los tiempos y costes. 
+- QUIÉN lo hará, se refiere a la asignación de los mandos intermedios que se encargarán de hilos concretos del proyecto. Estos mandos intermedios serán el enlace entre el gestor y el gran grupo de trabajadores y trabajadoras. Estas personas son también las que van a resolver los inconvenientes menores que vayan surgiendo en el desarrollo de; proyecto así que es importante elegir a personas que tengan unas capacidades y un conocimiento extenso de la materia que deben ges. 
 
-QUIÉN lo hará, se refiere a la asignación de los mandos intermedios que se encargarán de hilos concretos del proyecto. Estos mandos intermedios serán el enlace entre el gestor o la gestora y el gran grupo de trabajadores y trabajadoras. Estas personas son también las que van a resolver los inconvenientes menores que vayan surgiendo en el desarrollo de; proyecto así que es importante elegir a personas que tengan unas capacidades y un conocimiento extenso de la materia que deben ges. 
-
-Por último, el CUÁNDO debe concretar tanto el que una en marcha como la duración de esta. Además, se define{i definiendo qué relaciones de dependencia se pueden ser iniciadas hasta el momento en que otras tareas sean acabadas porque recibir algo de la primera, ya sean datos, algún objeto desarrouado o algún recurso en otra parte del proyecto
+- Por último, el CUÁNDO debe concretar tanto el que una en marcha como la duración de esta. Además, se define{i definiendo qué relaciones de dependencia se pueden ser iniciadas hasta el momento en que otras tareas sean acabadas porque recibir algo de la primera, ya sean datos, algún objeto desarrouado o algún recurso en otra parte del proyecto
 
 ## Presupuesto
 
@@ -23,7 +22,7 @@ Cada actividad tendrá un coste determinado y la suma de todas las actividades a
 
 -  Coste de las personas que participan directamente en la actividad. 
 
-- Coste del gestor o la gestora. 
+- Coste del gestor. 
 
 - Alquiler o compra de herramientas, maquinaria, equipos informáticos y/o audiovisuales, locales, etcétera
 
@@ -36,20 +35,151 @@ De la misma forma que se establece la fecha prevista de entrega, tambien se debe
 Es recomendable entregar el presupuesto en un formato PDF para evitar que se puedan producir modificaciones en el documento una vez firmado.
 
 ## Planteamiento inicial
+Consiste en idear el camino que se ha de recorrer desde el punto desde el que comienza el proyecto para solventar una carencia hasta que la carencia queda cubierta.
+
+Es el momento en el que hay que definir 3 puntos básicos referidos a la planificación y al control del proyecto: 
+
+1. Fijar y priorizar objetivos.
+1. Definir los entregables.
+1. Crear un programa de proyecto
+
+Ya se ha identificado en el estudio previo cuál es la naturaleza del proyecto y el objetivo general. Ahora es el momento de empezar a diseccionar y simplificar los hitos que se deben alcanzar para llegar al punto final del proyecto convirtiendo un objetivo complejo en la suma de otros más simples, 
+
+Estos logros más simples, a su vez, pueden seguir siendo descompuestos y simplificados generando un conjunto de objetivos pendientes. Una vez que se ha creado una lista de objetivos simples y fácilmente alcanzables hay que proceder a organizar su orden, estudiar cuáles de ellos
+requieren de la finalización de otras tareas y, con base en toda esta información, establecer prioridades de actuación terminando con el procedimiento de fijar y priorizar. 
+
+El segundo punto es la definición de entregables. Un entregable es el producto que se consigue al alcanzar un objetivo. Todo proyecto tiene al menos uno que sería el producto final terminado. Puede establecerse un conjunto de entregables en función de las tareas realizadas y, en caso de que el resultado del proyecto sea un objeto indivisible o intangible, el entregable puede ser un documento que recoja una memoria del estado del proyecto. 
+
+La gestión del tiempo en los proyectos es vital. No lo es solo para conseguir una entrega a tiempo de producto, sino también a nivel interno en el desarrollo del proyecto porque una tarea que se retrasa puede provocar que el resto del proyecto le acompañe en el retraso. Hay que planificar un programa del proyecto o cronograma que marque los tiempos asignados a cada una de las tareas y la fecha de inicio. 
 
 ### Actividad 2.2
+Una empresa dedicada a organizar eventos es contratada por una gestoría para que le organice la fiesta Navidad que celebran cada año en diciembre. ¿cuáles son los objetivos y con qué prioridades? 
 
-### Actividad 2.3
+**Introduccion**
+
+El objetivo general es el que da título al enunciado Organizar una fiesta de Navidad, que puede ser desglosado en:
+
+1. **Preparar el local:**
+- Alquilar un local. 
+- Comprar decoración. 
+- Decorar el local. 
+- Adecuar el local para la actividad: 
+- Preparar neveras para el hielo. 
+- Montar un sistema de sonido para la música. 
+
+2. **Preparar los elementos de la fiesta:**
+- Comprar comida y bebida. 
+- Comprar hielo. 
+- Recopilar música. 
+
+3. **Invitar al personal.**
+
+**Desarrollo:**
+
+La primera tarea debe ser alquilar un local, ya que sin el resultado positivo de esta actividad no tiene sentido hacer el resto. Hecho esto, la prioridad de actuaciones puede dividirse en varios puntos que pueden avanzar en paralelo, tales como: 
+
+- Comprar decoración. 
+- Montar sistema de sonido. 
+- Invitar al personal. 
+- Comprar bebida.  
+- Preparar música. 
+
+Todas estas actividades generan unos resultados que no son perecederos. El resto de las tareas se irán completando a medida que se acerque la fecha marcada para la fiesta, excepto comprar hielo, que se debe hacer lo mas cercano posible al inicio de esta.
 
 ### Actividad 2.4
+Un grupo de amigos decide alquilar un local para celebrar la fiesta de fin de año. Crea la programación para que las tareas se cumplan a tiempo para la Nochevieja. 
+
+1. **Preparar el local** -->  21 días, día 10. 
+
+- Alquilar un local                     --> 15 días, día 10. 
+- Comprar decoración                    --> 2 horas, día 26. 
+- Decorar el local                      --> 4 horas, día 30. 
+- Adecuar el local para la actividad    -->  2 días, día 29.  
+- Preparar neveras para el hielo        --> 3 horas, día 30. 
+- Montar un sistema de sonido           --> 6 horas, día 29. 
+
+
+2. **Preparar los elementos de la fiesta:**
+- Comprar comida y bebida.              --> 3 horas, dia 30
+- Comprar hielo.                        --> 1/2 hora, dia 31-
+- Recopilar música.                     --> 7 dias, dia 20
+
+3. **Invitar al personal.** --> 15 dias, dia 10
+
+Una vez que los pasos anteriores están realizados es el momento de afinarlos más mediante un estudio para identificar los futuros problemas y realizar una evaluación de riesgos, con el fin de prevenir o minimizar las dificultades que podrían surgir y el impacto que generarían en el proyecto. 
+
+Hay que desarrollar un documento con el análisis y la gestión de riesgo lo más mic;ockoso posible. Dedicar tiempo en esta actividad trae consigo otros beneficios muy notables en caso de que el riesgo posible realmente aparezca. 
+
+### Actividad 2.5
+Un grupo de amigos decide alquilar un local para celebrar la fiesta de fin de año, Identifica y enumera los problemas que pueden surgir. 
+
+- El mayor riesgo en «preparar el local» será no conseguir un espacio que no reúna las condiciones para la fiesta o que no se ajuste al presupuesto. 
+
+- La forma de prevenir mas sencilla consiste en ampliar lo máximo posible el tiempo dedicado a «alquilar un local». Aumentará el periodo de búsqueda y las probabilidades de éxito serán exponencialmente mayores.  Las actividades «comprar comida» y «comprar bebida» tienen un riesgo de quedar mal dimensionadas. Se puede prevenir finalizando previamente la actividad «invitar a los amigos» antes de comenzarlas, de forma que en ese momento se tenga la certeza de cuántas personas asistirán. 
+
+- «Comprar comida» también tiene el riesgo de que se eche a perder si pasa demasiado tiempo. Se soluciona acercando la fecha de la tarea a la de la fiesta. 
+
+- «Comprar hielo» esa noche puede resultar complicado porque existe el riesgo de que no haya comercios abiertos. Se puede solventar haciendo un listado de sitios que sí vayan a estar abiertos y reservando el producto por adelantado. 
 
 ## Planificar los recursos necesarios
+De la misma manera que las personas que intervienen en el proyecto deben ser controlados y organizados, los recursos tecnológicos y económicos con los que se cuenta para el desarrollo deben estar bajo una planificación eficiente y eficaz. 
 
-## Relacion entre las tareas
+El programa ProjectLibre no hace distinciones entre recursos humanos y recursos técnicos a la hora de utilizarlos o asignarlos a tareas. Es el propio gestor 0 gestora del proyecto, cuando introduce en el programa la descripción del recurso, el que define si se tiene características de recurso técnico o recurso humano al rellenar datos como correo electrónico o etiqueta material. 
+
+Cuando se destina un recurso a una tarea, esta se denomina asignación. Un recurso asignado a una tarea puede estarlo por tiempo completo (100 %) o un porcentaje menor del tiempo de la tarea (10 %, 50 %, etc.). Cuando dicho recurso completa el 100 % de su capacidad se supone que está completamente utilizado. Para los recursos humanos es así y, aunque existe la figura de la hora extra, se puede extender poco más allá del 100 % porque la legislación en materia de derecho laboral tiene controlada la cantidad de horas que una persona puede trabajar como máximo. 
+
+Los recursos técnicos pueden estar asignados a la vez a más de una tarea a jornada completa si las condiciones lo permiten porque, aunque esté la asignación a tiempo completo, puede que no sea un recurso que siempre esté en funcionamiento y cuente con tiempos muertos que puedan ser utilizados por otros equipos de trabajo. Además, como las máquinas no están sujetas a la legislación laboral, pueden trabajar 24 horas al día sin problema. Viendo un ejemplo para comprender mejor el concepto, nos situamos en la Actividad resuelta 2.5 que trata sobre un grupo de amigos que decide alquilar un local y montar una fiesta de Nochevieja. Un recurso nevera debía ser asignado / IUTC/ a las tareas comprar comida, comprar bebida y comprar hielo un 100 % a cada una de ellas. En ese momento el recurso nevera estaría sobreasignado a un 300 % y sería correcto.
+
+Para hacer una planificación ded los recursos de forma eficaz 
+
+- Dividir el trabajo n unidades, siendo cada unidad el trabajo de una persona en una jornada.
+- Estimar las unidades de trabajo resultante
+- Organizar las unidades de forma que se pueda reubicar a un trabajador en distintas tareas segun cierre las anteriores
+- Prever el despliegue de recursos
+- Calcular el programa de actividades
+- Plasmar en un grafico explicativo la asignacion de recursos y sus fechas de inicio y fin correspondiente.
+
+## Dependencias entre las tareas
+La existencia de dependencias entre tareas implica que existen entre ellas algún tipo de relación a la hora de desarrollar el proyecto. La naturaleza de esta relación varia en cada uno de los casos en los que se dé y, en consecuencia, las dependencias generadas entre ellas también varían su grado en la práctica. 
+
+Se puede hacer una división en función del grado de obligación o necesidad que establece una tarea con su sucesora, y otra partición distinta en función de si ambas tareas pertenecen a un mismo grupo lógico o provienen de campos distintos dentro del mismo proyecto. 
+
+Las dependencias pueden ser definidas como: 
+
+- Obligatorias. Cuando la relación que une las tareas es de una necesidad ineludible, como por ejemplo la actividad solicitar permiso de obra y excavar cimientos. 
+
+- Discrecionales. La relación que se establece es la más lógica entre ellas, pero no la única. Por ejemplo, en el proyecto de escribir una novela lo más lógico sería desarrollarla trama para luego titular la obra, pero es estrictamente necesario seguir ese orden. 
+
+Con respecto al grupo lógico al que pertenecen las tareas dentro de un proyecto pueden ser de dos tipos también: 
+
+- Internas. Cuando ambas tareas relacionadas están incluidas en una parte común del proyecto.  
+- Externas. Cuando pertenecen a zonas distintas. 
+
+La mezcla de estas dos categorías deja cuatro formas de dependencia de tareas atendiendo a su naturaleza. 
+
+## Vinculacion de nuevas tareas
+Cuando se vincula un conjunto de tareas se puede hacer de cuatro maneras distintas en función de que es que provoca la re;ación entre las tareas, algunas de estas opciones ya se han comentado anter;ormente:  
+- Fin a comienzo. 
+- Comienzo a comienzo. 
+- Fin a fin. 
+- Comienzo a fin (no se usa)
+
+La dependencia «Fin a comienzo» (FS, finish to start) es la más común de todas las dependencias. La tarea sucesora no puede empezar hasta que termine la tarea predecesora. Suele ocurrir cuando la sucesora necesita un producto o un recurso que sale de la primera y, hasta que no se produzca su liberación, es imposible desarrollar la siguiente. 
+
+La dependencia «Comienzo a comienzo» (SS, start to start) se establece cuando se presenta la lecesidad de que dos tareas empiecen en el mismo momento. El ejemplo más común es cuando los actividades requieren de un recurso que deben compartir, normalmente un recurso externo le acceso limitado. Hasta que no está a disposición el recurso no existe avance posible. 
+
+La dependencia «Fin a fin (FF, finish to finish) crea una relación entre las tareas de forma que hasta que la tarea predecesora no termina no puede acabar la sucesora. El ejemplo típico es una actividad que se desgrana en otras menores.
 
 ## Asignacion de recursos
+Para organizar los recursos hay que tenerlos desglosados en el documento de estudio y la descripcion de las tareas sobre qué hará falta y durante cuanto tiempo. 
 
-### Actividad 2.10
+En ProjectLibre, haciendo click sobre la tarea a la que se quiere asignar la lista de recursos basta con pulsar el boton Asignar para que aparezca un cuadro de dialogo con el listado de recursos disponibles.
+
+En este proceso solo hay que indicar el porcentaje de uso que tendrá sobre la actividad para no caer en sobreasignaciones indeseadas y, después, es suficiente con pulsar el botón Asignar. Los recursos asignados se verán también en el cronograrna representados junto a la tarea mostrando el nombre del reCLlrSO y el porcentaje de aplicación que se le asignó. 
+
+A la vista de la gestión de proyectos tiene el mismo valor un recurso propio como uno importado desde el exterior. Un recurso hace un trabajo o una función aportando un coste. así que su seguimiento a través de ProjectLibre no es distinto al resto de recursos. Pero, aunque a vistas del proyecto sea similar, los materiales y las subcontrataciones de personas o servicios están sujetos a fluctuaciones de precio según la oferta y la demanda del momento preciso.
+
+Es importante hacer un seguimiento de estas subidas y bajadas de precios para conseguir los recursos externos de la forma más económica posible especialmente en aquellos productos de los que se puede hacer acopio y que resultan de uso común en los proyectos que una empresa desarrolla. Comprarlos baratos significa que cuando se necesite usarlos en un proyecto futuro se habrán obtenido a un precio muy ventajoso. 
 
 ## Nivelacion de recursos
 - Video [1](https://www.youtube.com/watch?v=sR3O9yCtkDk)
