--- a/gai_project/ch03.md
+++ b/gai_project/ch03.md
@@ -1,7 +1,32 @@
 # Chapter 03: Seguimiento y Preparación de Resultados 
 
 ## Vistas disponibles
-    tareas, recursos (pág. 64)
+ProjectLibre, en su intención de hacer más cómoda y eficaz la gestión de proyectos, ha dispuesto una serie de vistas divididas por campos de accion:
+
+- Vistas relativas a las tareas. 
+- Vistas relativas a los recursos. 
+- Otras vistas. 
+
+Las vistas que conciernen a las tareas serán objeto de estudio en el siguiente apartado. Projectlibre tiene disponibles cuatro opciones posibles: 
+
+- Gantt. Es la vista de uso más habitual. Un diagrama En ella de se Gantt muestran es la las representación descripciones de de la las duración tareas y el de diagrama de Gantt que definen.  
+
+las tareas y la relación que guardan unas tareas con otras. 
+
+- Red. La vista del diagrama de red muestra la ruta crítica del proyecto, las dependencias tareas. En este gráfico, las tareas son representadas por cuadros y las dependencias se pintan como líneas que conectan dichos cuadros. 
+
+- WBS. Son las siglas de Work Breakdown Structure o estructura de descomposición del trabajo Una vista representa las tareas en una estructura piramidal que va descendiendo desde lo más general a lo más particular. 
+
+- Uso de tarea. La vista se centra en el tiempo efectivo de trabajo de las tareas. El cronograma se convierte en horas de trabajo que permite el calendario laboral. 
+
+Los recursos tienen tres vistas disponibles que ayudan a operar con ellos y conocer su estado: 
+
+- Recursos. Es la ventana básica donde se definen los recursos, la cuadrícula donde se completan los datos que especifican el nombre, tipo, coste, etcétera. 
+
+- RBS. Son las siglas de Resources Breakdown Structure o estructura de desglose de recursos. Organiza los recursos de forma jerarquizada según la dependencia que exista entre las tareas, 
+
+- Uso de recurso. Lista cada recurso relacionándolo con las tareas que tiene asignado y el porcentaje de utilización que tiene. 
+
 
 ## Ruta crítica de tareas 
 
