--- a/gai_project/ch03.md
+++ b/gai_project/ch03.md
@@ -1,6 +1,19 @@
-# Chapter 03: Seguimiento y Preparación de Resultados 
+# Chapter 03: Seguimiento y Preparación de Resultados
+
+La monitorización del proyecto es la forma que el gestor de proyectos tiene de conseguir entender la situación actual real del proyecto. Con los datos que va obteniendo de esta vigilancia puede observar si las metas que se establecieron en la fase de planificación previa se van cumpliendo y, en función de la respuesta obtenida, si deben introducirse cambios en la estrategia a la hora de abordar el proyecto. 
+
+El adecuado control sobre el progreso del proyecto hace posible evitar o, al menos, minimizar las desviaciones tanto en costes como en plazos del proyecto en curso. Cuando el gestor de proyecto detecta que un objetivo no se está alcanzando al ritmo previsto puede analizar las causas y buscar soluciones balanceando la distribución de los recursos del proyecto o a través de cambios en la estrategia, velando por el cumplimiento del calendario torevisto. La correcta monitorización del avance del proyecto permite opcnizar la gestión de incidencias.
+
+La gestión de estas incidencias será lo que decida en buena parte si el royecto será exitoso o fracasará. La monitorización completa del proyecto permite detectar tres puntos estratégicos desde los que rehacer las estrategias de trabajo: 
+
+- Las tareas afectadas por una incidencia.  
+- Las horas de trabajo perdidas. 
+- Los retrasos ocasionados acumulados. 
+
+Una vez que el problema ha surgido hay que analizar el impacto que tiene sobre el conjunto del proyecto, buscar una solucion y proceder al registro de la inicidencia en la memoria del proyecto.
 
 ## Vistas disponibles
+
 ProjectLibre, en su intención de hacer más cómoda y eficaz la gestión de proyectos, ha dispuesto una serie de vistas divididas por campos de accion:
 
 - Vistas relativas a las tareas. 
@@ -9,13 +22,11 @@ ProjectLibre, en su intención de hacer más cómoda y eficaz la gestión de pro
 
 Las vistas que conciernen a las tareas serán objeto de estudio en el siguiente apartado. Projectlibre tiene disponibles cuatro opciones posibles: 
 
-- Gantt. Es la vista de uso más habitual. Un diagrama En ella de se Gantt muestran es la las representación descripciones de de la las duración tareas y el de diagrama de Gantt que definen.  
+- Gantt. Es la vista de uso más habitual. En ella de se muestran las descripciones de las tareas y el diagrama que defininen. Es la representacion la duración de las tareas y la relación que guardan unas tareas con otras.
 
-las tareas y la relación que guardan unas tareas con otras. 
+- Red. La vista del diagrama de red muestra la ruta crítica del proyecto, las dependencias y las tareas. En este gráfico, las tareas son representadas por cuadros y las dependencias se pintan como líneas que conectan dichos cuadros. 
 
-- Red. La vista del diagrama de red muestra la ruta crítica del proyecto, las dependencias tareas. En este gráfico, las tareas son representadas por cuadros y las dependencias se pintan como líneas que conectan dichos cuadros. 
-
-- WBS. Son las siglas de Work Breakdown Structure o estructura de descomposición del trabajo Una vista representa las tareas en una estructura piramidal que va descendiendo desde lo más general a lo más particular. 
+- WBS. Son las siglas de Work Breakdown Structure o estructura de descomposición del trabajo. Una vista representa las tareas en una estructura piramidal que va descendiendo desde lo más general a lo más particular. 
 
 - Uso de tarea. La vista se centra en el tiempo efectivo de trabajo de las tareas. El cronograma se convierte en horas de trabajo que permite el calendario laboral. 
 
@@ -27,22 +38,107 @@ Los recursos tienen tres vistas disponibles que ayudan a operar con ellos y cono
 
 - Uso de recurso. Lista cada recurso relacionándolo con las tareas que tiene asignado y el porcentaje de utilización que tiene. 
 
-
 ## Ruta crítica de tareas 
+
+Se denomina tareas críticas del proyecto a la lista de tareas que, en caso de retardar su fecha de finalización, retrasarán el conjunto completo del proyecto. No se refiere por crítico a la importancia particular de las tareas, sino a los periodos temporales previstos en el planeamiento inicial. 
+
+La **ruta crítica** no es una entidad inamovible a lo largo del proyecto. Si se van cumpliendo los plazos previstos para cada tarea el camino crítico permanecerá como el calculado en el primer momento. Si, por el contrario, se posterga la finalización de alguna tarea puede provocar un retraso en la línea temporal suficiente como para que pase a ser parte del camino crítico. 
+
+También puede ocurrir que una tarea crítica se termine antes del plazo previsto y que otra tarea tome su lugar en el camino crítico haciendo nuevo cálculo de este. 
+
+Si los nodos que conforman la ruta crítica del proyecto son los que no admiten retraso en su cumplimiento significa, por contraposición, que el resto de las tareas que sean ajenas a este camino sí admitirán una cterta cantidad de retraso en su finalización. Esta flexibilidad es importante porque permitirá, en caso necesidad, redirigir recursos a otras tareas que acumulen más retraso. 
+
+Para calcular la rota crítica se creará una tabla en la que habrá que representar el listado de tareas a realizar. Para rnaynr comodidad a la hora de trabajar se le asigna una letra a cada una de ellas. En la siguiente columna se reflejará qué tarea es su predecesora. La tercera columna es la referente a la duración expresada con un número. 
 
 ### Actividad 3.1
 
-### Actividad 3.6
+Supongamos un proyecto P que se compone de las tareas A, B, C, D, E, F, G, H e l. 
+
+La duración de las tareas es, para A 5 días, B 6 días, C 4 días, D 3 días, E 1 día, F 4 días, G 14 días, H 12 días y, por último, 1 2 días. Las tareas C, D y E tienen como predecesora a A. E es la predecesora de F. G es precedida de Dy de F. H es precedida de B y, para acabar, I es precedida de H, c y G. 
+
+Crea la tabla de predecesores y duración.
+
+---
+
+Una vez que los datos están claramente expuestos en una tabla, el siguiente paso es crear un grafo auxiliar con ellos. 
+
+Un **grafo** es una representación gráfica de puntos que son conocidos como nodos o vértices, que se encuentran unidos entre sí a través de líneas. Sirven para representar las relaciones entre los nodos. Asimismo, un grafo puede representar un único tipo de relación entre los nodos (simple), o más de un tipo de relación (múltiple). 
+
+Para crear el grafo se representan las actividades en nodos o círculos. Se les nombra como a la actividad que refieren o se puede usar un alias para acortar este nombre. También se incluye dentro del nodo la duración que se ha planificado para la tarea. 
+
+Los nodos se van colocando de manera descendente conectando cada uno con las tareas que le eden mediante flechas hasta llegar a completar todo el listado, de esta forma se dibujan todos  caminos posibles que el proyecto tiene para llegar desde su inicio a la consecución del objetivo. 
+
+Una vez expuestos los datos en el grafo se identifican las actividades que dan comienzo a un hilo trabajo y las que son finales. Las que dan comienzo se caracterizan porque no tienen tareas decesoras. Las actividades que son finales, al contrario, son las que no son precursoras de ninIna otra. La duración estimada de un proyecto será la ruta más larga que se pueda trazar entre comienzo de una tarea inicial y la finalización de un nodo final. 
 
 ## Gantt de seguimiento
 
+El diagrama de Gantt es una herramienta visual para la planificación y programación de actividades tareas sobre una línea del tiempo. En él se plasma cada actividad del proyecto especificando la duración, su fecha de comienzo y las relaciones que tiene con otras actividades. A través de una gráfica el gestor de proyecto puede llevar el control de la planificación del avance trabajo. 
+
+Es un gráfico que permite una evaluación rápida del estado del proyecto. Es la forma más rápida de unificar puntos de vista entre el gestor de proyectos y su equipo porque proporciona una visualización rápida de las cargas de trabajo y la marcha del proyecto. 
+
+Es el **gráfico de trabajo básico** en la gestión de proyectos y sirve de base para otras técnicas más complejas como, por ejemplo, el análisis PERT. Este gráfico es el que ProjectLibre muestra automáticamente desde el momento en que se empiezan a introducir tareas en su listado. 
+
+### Actividad 3.6
+
+Crea en ProjectLibre el proyecto de la Actividad resuelta 3.1 para conseguir el Gantt de seguimiento correspondiente. 
+
+Basta con definir las tareas de la actividad, con su duración y sus tareas predecesoras para que se genere automáticamente el Gantt de seguimiento: 
+
+![image](act_36_gant.png)
+
 ### Actividad 3.7
+
+El proyecto de la Actividad resuelta 3.1 va avanzando a buen ritmo. Las tareas de la A a la F ya fueron completadas, G tiene un avance del 15 % y H lo tiene del 60 96. 
+
+Siguiendo las instrucciones del enunciado y reflejando esos datos en cada tarea en el menú Información, el Gantt de seguimiento quedaria asi:
+
+![image](act_37_gant.png)
 
 ## Diagrama de red 
 
-### Actividad 3.8 (pág. 73)
+El diagrama de red es una variación del diagrama de Gantt en la que se elimina la cuadrícula con la descripción de las tareas. En la parte gráfica se cambian las barras azules y rojas con las que el Gantt de seguimiento mostraba las tareas previstas, ahora pasan a ser cuadros con la información básica de las tareas como es el nombre, la duración, la fecha de inicio planeada y la fecha de finalización prevista. 
+
+También marca la ruta crítica de tareas marcando de rojo los marcos de las actividades que la forman, igual que lo hacía el diagrama de seguimiento de Gantt. 
+
+Este diagrama tiene funciones descriptivas más que operativas. Está diseñado para poder trasladar la idea de la composición del proyecto más que para ser un elemento de seguimiento de este. Muestra la información mínima necesaria para que alguien que no conoce la materia que se trata pueda atisbar qué se pretende hacer, con lo que es especialmente útil en reuniones con clientes o clientas, con grupos inversores o con personas agregadas nuevas al proyecto. 
+
+### Actividad 3.8 
+
+El equipo del proyecto que se está desarrollando desde la Actividad resuelta 3.1 recibe nuevas incorporaciones. Abre el proyecto y muestra la vista del diagrama de red para informarles de la composición del proyecto y sus partes. 
+
+Desde la vista de red se simplifica la información que se maneja del proyecto y sus tareas, exponiéndola resumidamente: 
+
+![image](act_38_gant.png)
 
 ## Caso practico
 
 Un arquitecto esta planificando construir una vivienda. Para ayudarse decide implementarlo en ProjectLibre
 
+- Preparar terreno: 1 dia
+
+- Hacer la base: 3 días. Comienza cuando acaba Prepara terreno.
+
+- Hacer el armazon: 5 días. Comienza cuando acaba Hacer la base
+
+- Levantar paredes: 7 días. Comienza cuando termina Hacer armazon
+
+- Hacer el suelo: 2 días. Se empieza a la vez que Paredes
+
+- Encofrar el techo: 7 días. Se inicia cuando Hacer el suelo y Paredes terminan
+
+- Echar forjado: 1 dia. Se empieza cuando termina Encofrar el techo
+
+- Poner tuberías: 7 días. Comienza al terminar Echar forjado. 
+
+- Cablear: 4 días. Empieza cuando acaba Poner tuberías. 
+
+- Colocar puertas: 3 días. Empieza a la vez que Colocar ventanas. 
+
+- Colocar ventanas: 4 días. Empieza al acabar Poner tuberías. 
+
+Proceso:
+
+1. Crear el proyecto en ProjectLibre
+1. Definir la ruta crítica 
+1. Plasmar en el proyecto el avance de las tareas:  Preparar terreno 100 %. Hacer la base 100%. Hacer armazón 80 %
+1. Obtener un PDF del diagrama de red del proyecto para documentar una reunión con un cliente.
