--- a/gai_project/ch03.md
+++ b/gai_project/ch03.md
@@ -84,7 +84,7 @@ Crea en ProjectLibre el proyecto de la Actividad resuelta 3.1 para conseguir el 
 
 Basta con definir las tareas de la actividad, con su duración y sus tareas predecesoras para que se genere automáticamente el Gantt de seguimiento: 
 
-![image](act_36_gant.png)
+![a](images/act_36_gant.png)
 
 ### Actividad 3.7
 
@@ -92,7 +92,7 @@ El proyecto de la Actividad resuelta 3.1 va avanzando a buen ritmo. Las tareas d
 
 Siguiendo las instrucciones del enunciado y reflejando esos datos en cada tarea en el menú Información, el Gantt de seguimiento quedaria asi:
 
-![image](act_37_gant.png)
+![a](images/act_37_gant.png)
 
 ## Diagrama de red 
 
@@ -108,7 +108,7 @@ El equipo del proyecto que se está desarrollando desde la Actividad resuelta 3.
 
 Desde la vista de red se simplifica la información que se maneja del proyecto y sus tareas, exponiéndola resumidamente: 
 
-![image](act_38_gant.png)
+![a](images/act_38_gant.png)
 
 ## Caso practico
 
