--- a/gai_project/ch03.md
+++ b/gai_project/ch03.md
@@ -84,15 +84,15 @@ Crea en ProjectLibre el proyecto de la Actividad resuelta 3.1 para conseguir el 
 
 Basta con definir las tareas de la actividad, con su duración y sus tareas predecesoras para que se genere automáticamente el Gantt de seguimiento: 
 
-![a](https://github.com/ubriquejazz/apuntes25/blob/main/gai_project/images/act_36_gantt.png)
+![act_36_gantt](https://github.com/ubriquejazz/apuntes25/blob/main/gai_project/images/act_36_gantt.png)
 
 ### Actividad 3.7
 
-El proyecto de la Actividad resuelta 3.1 va avanzando a buen ritmo. Las tareas de la A a la F ya fueron completadas, G tiene un avance del 15 % y H lo tiene del 60 96. 
+El proyecto de la Actividad resuelta 3.1 va avanzando a buen ritmo. Las tareas de la A a la F ya fueron completadas, G tiene un avance del 15 % y H lo tiene del 60%.
 
 Siguiendo las instrucciones del enunciado y reflejando esos datos en cada tarea en el menú Información, el Gantt de seguimiento quedaria asi:
 
-![a](https://github.com/ubriquejazz/apuntes25/blob/main/gai_project/images/act_37_gantt.png)
+![act_37_gantt](https://github.com/ubriquejazz/apuntes25/blob/main/gai_project/images/act_37_gantt.png)
 
 ## Diagrama de red 
 
@@ -108,7 +108,7 @@ El equipo del proyecto que se está desarrollando desde la Actividad resuelta 3.
 
 Desde la vista de red se simplifica la información que se maneja del proyecto y sus tareas, exponiéndola resumidamente: 
 
-![a](https://github.com/ubriquejazz/apuntes25/blob/main/gai_project/images/act_38_diagred.png)
+![act_38_diagred](https://github.com/ubriquejazz/apuntes25/blob/main/gai_project/images/act_38_diagred.png)
 
 ## Caso practico
 
