--- a/cd_tareas/202410A.md
+++ b/cd_tareas/202410A.md
@@ -3,10 +3,9 @@
 ## Recursos
 
 - REA: Animamos tu evento (processing)
-- Preparación de la tarea 2: Pseudocodigo con PSeInt
 - Proyectos en Processing: Pelotas, Drop, Atractor
 
-## Criterios evaluacion
+## Actividades
 
 UD01. Act04. Rellenando un padlet (processing)
 
@@ -22,7 +21,7 @@ UD01. Act09. Piramide de Sierpinski
 
 ## Tareas
 
-Tarea 1: Instrucciones de PSeInt  
-Tarea 2: Diagrama de Flujo y Pseudocódigo  
-Tarea 3: Figuras con Processing
-Tarea 4: Un proyecto en processing
+- Tarea 1: Tutorial de Processing
+- Tarea 2: Diagrama de Flujo y Pseudocódigo  
+- Tarea 3: Figuras con Processing
+- Tarea 4: Un proyecto en processing
