--- a/cd_tareas/202410A.md
+++ b/cd_tareas/202410A.md
@@ -1,13 +1,24 @@
-# Programacion Grafica Multimedia (II)
+# Programacion Grafica Multimedia
 
 ## Recursos
+
+- Introducción a la programación  
+- Curso express de programación (minecraft)
+- Tutorial de Scratch
+- Compute-it (web de estructuras de control)
 
 - REA: Animamos tu evento (processing)
 - Proyectos en Processing: Pelotas, Drop, Atractor
 
 ## Actividades
 
-UD01. Act04. Rellenando un padlet (processing)
+UD01. Act01. Definiendo algoritmo y código (minecraft)
+
+UD01. Act02. Recreación de historia (scratch)
+
+UD01. Act03. Creación del juego flappy bird (scratch)
+
+UD01. Act04. Tutorial de Processing
 
 UD01. Act05. Mi primera figura.
 
@@ -19,9 +30,10 @@ UD01. Act08. De esquina a esquina
 
 UD01. Act09. Piramide de Sierpinski
 
-## Tareas
+## Tareas evaluables
 
-- Tarea 1: Tutorial de Processing
-- Tarea 2: Diagrama de Flujo y Pseudocódigo  
-- Tarea 3: Figuras con Processing
-- Tarea 4: Un proyecto en processing
+- Recreación de historia (scratch)
+- Creación del juego flappy bird (scratch)
+
+- Cuadros de Mondrian
+- Un proyecto en processing
