--- a/segin_romero/202410A.md
+++ b/segin_romero/202410A.md
@@ -1,10 +1,14 @@
+# Virtualizacion con VIRSH
+
 ## Red modo user 
+
     Proxy: 10.0.2.2
     MV: 10.0.2.15
     10.0.2.0/24 (virtual net)
     MFx: 192.168.0.0/21
 
 ## Red modo bridge 
+
     Proxy: 192.168.123.1
     MV1: .100
     MV2: .101
@@ -14,7 +18,8 @@
     MFx: 192.168.0.0/21 (andared)
     
 ## Comandos
-    getent passwd
+
+    getenv passwd
 
     virsh list --all
 
